Remove background blocking javascript for fixing dark mode, dont want to block content from rendering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,3 @@
-:root {
-  --color-background: #fff;
-}
-
-[data-theme="dark"] {
-  --color-background: #121212;
-}
-
 html {
   padding: 0;
   margin: 0;
@@ -14,7 +6,6 @@ html {
 }
 
 body {
-  background-color: var(--color-background);
   padding: 0;
   margin: 0;
   overflow-y: scroll;
